--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,7 +11,7 @@ body {
 }
 
 .head_tralor{
-  background-image: url("img/IMG_6745.JPG");
+  background-image: url("IMG_6745.JPG");
   background-size:cover;
   color:white;
 }
